[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-diff-ast"
version = "0.1.0"
description = "Git diff to AST mapper CLI for LLM consumption"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "unidiff>=0.7.0",
]

[project.scripts]
code-diff = "code_diff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_diff"]

[tool.hatch.build.targets.sdist]
include = ["src/code_diff"]
